--- a/layouts/partials/features.html
+++ b/layouts/partials/features.html
@@ -5,38 +5,43 @@
         <svg xmlns='http://www.w3.org/2000/svg' class='feather text-violet feather-big' width="4em" height="4em">
             <use href="{{ `images/feather/feather-sprite.svg#shield` | relURL }}"/>
         </svg>
-        <h2 class="h2">Security aware <small class="d-none">🛡️</small></h2>
-        <p>Get A+ scores on <a href="https://observatory.mozilla.org/" target="_blank" rel="noopener">Mozilla Observatory</a>
-            out of the box. Easily change the default Security Headers to suit your needs.</p>
+        <h2 class="h2">Categorizing via Tags<small class="d-none">🛡️</small></h2>
+        <p> Attach one or more tags to your information.  Select tags from suggestions or provide your own</p>
     </div>
     <div class="col-lg-4">
         <svg xmlns='http://www.w3.org/2000/svg' class='feather text-violet feather-big' width="4em" height="4em">
             <use href="{{ `images/feather/feather-sprite.svg#zap` | relURL }}"/>
         </svg>
-        <h2 class="h2">Fast by default <small class="d-none">🚀</small></h2>
-        <p>Get 100 scores on <a href="https://googlechrome.github.io/lighthouse/viewer/?gist=1f990bcb2d769bb4e82e7fc7a8be2b1f" target="_blank" rel="noopener">Google Lighthouse</a>
-             by default. Hugo Bootstrap Theme removes unused css, prefetches links, and lazy loads images.</p>
+        <h2 class="h2">Quick Searching</h2>
+        <p>Search using keywords and filter using tags.  
+            Use set operations to determine how different tag filters interact: union, intersection, and minus.</p>
     </div>
     <div class="col-lg-4">
         <svg xmlns='http://www.w3.org/2000/svg' class='feather text-violet feather-big' width="4em" height="4em">
             <use href="{{ `images/feather/feather-sprite.svg#trending-up` | relURL }}"/>
         </svg>
-        <h2 class="h2">SEO-ready <small class="d-none">📈</small></h2>
-        <p>Use sensible defaults for structured data, <a href="https://ogp.me/" target="_blank" rel="noopener">open graph</a>, and <a href="https://developer.twitter.com/en/docs/tweets/optimize-with-cards/overview/abouts-cards" target="_blank" rel="noopener">Twitter cards</a>. Or easily change the Search Engine Optimization settings to your liking.</p>
+        <h2 class="h2">Collaboration</h2>
+        <p>Syncronize across multiple accounts instantly.
+        Restrict access to keep sensitive information hidden.
+        Use the changelog to moderate edits, ensuring information integrity and persistant organization consistency</p>
     </div>
 </div>
-
+<div>
+    <br>
+    <br>
+</div>
 <div class="row justify-content-center text-center mt-lg-3">
     <div class="col-lg-4">
-        <h2 class="h2">Hugo <small class="d-none">🦉</small></h2>
-        <p><a href="https://gohugo.io/" target="_blank" rel="noopener">Hugo</a> is one of the most popular open-source static site generators. With its amazing speed and flexibility, Hugo makes building websites fun again.</p>
+        <h2 class="h2">Information Visualization</h2>
+        <p>Display information units as paragraphs, lists, bullets, graphs, flowcharts, timelines, or notecards.
+            Move and rearrange individual components on your screen</p>
     </div>
     <div class="col-lg-4">
-        <h2 class="h2">Bootstrap <small class="d-none">✨</small></h2>
-        <p>Powerful, extensible, and feature-packed <a href="https://getbootstrap.com/" target="_blank" rel="noopener">frontend toolkit</a>. Build and customize with Sass, utilize prebuilt grid system and components, and bring projects to life with powerful JavaScript plugins.</p>
+        <h2 class="h2">Exportation</h2>
+        <p>Rearrange your information on multiple fixed-sized pages for conversion to PDF, .DOC file, or PNG</p>
     </div>
     <div class="col-lg-4">
-        <h2 class="h2">Page layouts <small class="d-none">🧰</small></h2>
-        <p>Build pages with a landing page, blog, or documentation layout. Add custom sections and components to suit your needs.</p>
+        <h2 class="h2">User-driven Customization</h2>
+        <p>Start with an intuitive, default workflow.  Then decide when you want to customize your own experience.  Add keyboard shortcuts, automate actions, or rearrange your toolbar</p>
     </div>
 </div>
