--- a/layouts/index.html
+++ b/layouts/index.html
@@ -4,8 +4,9 @@
   <div class="container-xxl">
     <div class="col-md-8 mx-auto text-center my-5">
       <!-- product image/logo goes here?-->
-      <img class="d-block mx-auto mb-3" src="{{ `images/logo.svg` | relURL }}" width="150" height="150" alt="Bootstrap">
-      <h1 class="display-4 fw-semibold mb-3">{{ .Site.Title }}</h1>
+      <img src = 'images/inkwell.png' width = "170" height = "170" style="margin-left: 50px;">
+      <!-- <img class="d-block mx-auto mb-3" src="{{ `images/logo.svg` | relURL }}" width="150" height="150" alt="Bootstrap"> -->
+      <h1 class="display-4 mb-3" style ="font-family: cursive;">{{ .Site.Title }}</h1>
       <p class="text-muted mb-0">for story tellers, lore trackers, and anyone holding a universe in their mind</p>
       <p class="lead mb-4">{{ .Site.Params.Description }}</p>
       <a class="btn btn-bd-primary btn-lg px-4 mb-2" href="https://github.com/ashfujiyama/hugo-mock-landing-page" role="button">Get Started</a>
