--- a/layouts/partials/features.html
+++ b/layouts/partials/features.html
@@ -2,24 +2,18 @@
 
 <div class="row justify-content-center text-center mt-lg-3">
     <div class="col-lg-4">
-        <svg xmlns='http://www.w3.org/2000/svg' class='feather text-violet feather-big' width="4em" height="4em">
-            <use href="{{ `images/feather/feather-sprite.svg#shield` | relURL }}"/>
-        </svg>
+        <img src = 'images/bluetag.png' width = "100" height = "100" >
         <h2 class="h2">Categorizing via Tags<small class="d-none">🛡️</small></h2>
         <p> Attach one or more tags to your information.  Select tags from suggestions or provide your own</p>
     </div>
     <div class="col-lg-4">
-        <svg xmlns='http://www.w3.org/2000/svg' class='feather text-violet feather-big' width="4em" height="4em">
-            <use href="{{ `images/feather/feather-sprite.svg#zap` | relURL }}"/>
-        </svg>
+        <img src = 'images/search.png' width = "100" height = "100" >
         <h2 class="h2">Quick Searching</h2>
         <p>Search using keywords and filter using tags.  
             Use set operations to determine how different tag filters interact: union, intersection, and minus.</p>
     </div>
     <div class="col-lg-4">
-        <svg xmlns='http://www.w3.org/2000/svg' class='feather text-violet feather-big' width="4em" height="4em">
-            <use href="{{ `images/feather/feather-sprite.svg#trending-up` | relURL }}"/>
-        </svg>
+        <img src = 'images/squarecollab.png' width = "100" height = "100" >
         <h2 class="h2">Collaboration</h2>
         <p>Syncronize across multiple accounts instantly.
         Restrict access to keep sensitive information hidden.
