--- a/assets/sass/styles.scss
+++ b/assets/sass/styles.scss
@@ -3,7 +3,8 @@
     /*should be: 2f99c3*/
     --bd-violet: #c32f2f;
     --bd-accent: #147995;
-    --bd-violet-rgb: 47,153,195;
+    /*should be 47,153,195;*/
+    --bd-violet-rgb: 100,0,0;
     /*should be 20, 121, 149*/
     --bd-accent-rgb: 100,21,19;
     --bd-pink-rgb: 118,214,253;
