--- a/assets/sass/styles.scss
+++ b/assets/sass/styles.scss
@@ -1,12 +1,9 @@
 .home {
     --bd-purple: #0d5390;
-    /*should be: 2f99c3*/
-    --bd-violet: #c32f2f;
+    --bd-violet: #2f99c3;
     --bd-accent: #147995;
-    /*should be 47,153,195;*/
-    --bd-violet-rgb: 100,0,0;
-    /*should be 20, 121, 149*/
-    --bd-accent-rgb: 100,21,19;
+    --bd-violet-rgb: 47,153,195;
+    --bd-accent-rgb: 20,121,149;
     --bd-pink-rgb: 118,214,253;
 
     .bd-masthead {
